--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "Profile_Photo.png"
+  avatar           : "profile_photo.png"
   name             : "Zhongnan Xiang（项忠楠）"
   pronouns         : # example: "she/her"  
   bio              : ""
